# user/user.controller.js
@@ -1,0 +1,10 @@
+import { findUserByName } from "./user.service.js";
+
+export const userController = [
+  {
+    path: '/api/users',
+    method: 'GET',
+    requiresAuth: true,
+    handler: findUserByName,
+  },
+];
